--- a/formuláriorafaballerini.css
+++ b/formuláriorafaballerini.css
@@ -47,7 +47,7 @@ float: left;
 margin-right: 1em;
 }
 
-.campo input[type="text"], .campo input[type="emil"] .campo select, .campo textarea{
+.campo input[type="text"], .campo input[type="email"] .campo select, .campo textarea{
     padding: 0.2em; 
     border: 1px solid #59429d;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
