--- a/formuláriorafaballerini.css
+++ b/formuláriorafaballerini.css
@@ -62,7 +62,7 @@ margin-right: 1em;
     background: #e0e0f8;
 }
 
-.botão{
+.botao{
     font-size: 1.2em; 
     background-color: #59429d;
     border: 0;
@@ -78,7 +78,7 @@ margin-right: 1em;
     transform: translate(-50%, -50%0)
 }
 
-.botão:hover {
+.botao:hover {
     background: #ccbbff;
     box-shadow: inset 2px 2px 2px rgba(0,0,0,0.2);
     text-shadow: none;
