--- a/formuláriorafaballerini.css
+++ b/formuláriorafaballerini.css
@@ -54,6 +54,10 @@ margin-right: 1em;
     display: block;
 }
 
+.campo input[type="email"] {
+    padding: 0.2em;
+}
+
 .campo select option{
     padding-right: 1em;
 }
